cmake_minimum_required (VERSION 2.6)
project (App)
set(EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../bin)
file(GLOB SOURCES *.cpp)

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/../Librerias/freeglut-linux/lib 
${PROJECT_SOURCE_DIR}/../Librerias/glew-2.0.0/lib 
${PROJECT_SOURCE_DIR}/../Librerias/OGLES2/pvr/lib 
${PROJECT_SOURCE_DIR}/../Librerias/SDL-1.2.14/lib 
${PROJECT_SOURCE_DIR}/../bin)

add_executable(App ${SOURCES})

include_directories(${PROJECT_SOURCE_DIR}/../Librerias/freeglut-linux 
${PROJECT_SOURCE_DIR}/../Librerias/freeglut-linux/include
${PROJECT_SOURCE_DIR}/../Librerias/glew-2.0.0/include 
${PROJECT_SOURCE_DIR}/../Librerias/OGLES2/amd/include 
${PROJECT_SOURCE_DIR}/../Librerias/SDL-1.2.14/include 
${PROJECT_SOURCE_DIR}/../Librerias/stb/include )

target_link_libraries(App T800Framework freeglut glew EGL GLESv2 wayland-cursor wayland-client wayland-egl xkbcommon)