cmake_minimum_required (VERSION 2.6)
project (T800Framework)

set(CMAKE_CXX_STANDARD 11)

include_directories(${PROJECT_SOURCE_DIR}/../Librerias/freeglut-linux 
${PROJECT_SOURCE_DIR}/../Librerias/freeglut-linux/include
${PROJECT_SOURCE_DIR}/../Librerias/glew-2.0.0/include 
${PROJECT_SOURCE_DIR}/../Librerias/OGLES2/pvr/include 
${PROJECT_SOURCE_DIR}/../Librerias/SDL-1.2.14/include 
${PROJECT_SOURCE_DIR}/../Librerias/stb/include )

set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../lib)
file(GLOB SOURCES src/video/*.cpp 
src/utils/*.cpp 
src/scene/*.cpp 
src/core/*.cpp)

add_library(T800Framework ${SOURCES})
target_include_directories(T800Framework PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>/include)

install(TARGETS T800Framework DESTINATION Lib)